@@ -18,7 +18,7 @@ namespace PathOfModifiers.Affixes.Prefixes
         public override string addedText => addedTextTiered;
         public override float addedTextWeight => addedTextWeightTiered;
 
-        static float[] tiers = new float[] { 0f, 0.02f, 0.04f, 0.05f, 0.06f, 0.08f, 0.1f };
+        static float[] tiers = new float[] { 0f, 0.003f, 0.007f, 0.01f, 0.013f, 0.017f, 0.02f };
         static Tuple<int, double>[] tierWeights = new Tuple<int, double>[] {
             new Tuple<int, double>(0, 3),
             new Tuple<int, double>(1, 2.5),
@@ -55,7 +55,7 @@ namespace PathOfModifiers.Affixes.Prefixes
 
         public override string GetTolltipText(Item item)
         {
-            return $"[T{tierText}] {(int)Math.Round(multiplier * 100)}% lifesteal on melee hits";
+            return $"[T{tierText}] {(int)Math.Round(multiplier * 100, 1)}% lifesteal on melee hits";
         }
 
         public override void OnHitNPC(Item item, Player player, NPC target, int damage, float knockBack, bool crit)
